MacViews: Fix GetOffsetFromRootSurface

This should be based off of the ui::Layer heirarchy, not the NSView
heirarchy.

Bug: 860344
Change-Id: I307a1d681a21846886bb6118a3e3acf97c2b268e
Reviewed-on: https://chromium-review.googlesource.com/1144215
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577073}
Former-commit-id: d3fa3357f872fd2175fba29df3da5f8f10bffb6e